style.css
/* ... */
.contact-container p {
    font-size: small;
    color: #EFEAE3;
    justify-content: center;
}

#footer-links {
    display: flex;
    align-items: center;
    text-decoration: none;
}

#footer-links a {
    font-size: larger;
    transition: color 0.2s;
    justify-content: center;
    text-decoration: none;
    color: #EFEAE3;
    margin-right: 7.9px;
    margin-top: 0.81rem;
    cursor: pointer;
    z-index: 10; /* Ensure the links are above other elements */
    position: relative; /* Added to ensure proper positioning */
}

#footer-links a:hover {
    color: #FE320A;
}
}

#footer-bottom {
    border-top: 1px solid #c9cad1;
    height: 4vh;
    width: 100%;
    justify-content: space-between;
    display: flex;
}

#whom, #what, #when{
    text-align: left;
    margin-top: 9px;
    font-size: smaller;
}

#full-scr {
    height: 100vh;
    width: 100%;
    background-color: #17181e;
    position: fixed;
    z-index: 99;
    top: -100%;
    transition: all ease 0.5s;
}

#full-div1 {
    height: 50%;
    width: 100%;
    background-color: #EFEAE3;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

@media (max-width:600px) {

    #page1 {
        min-height: 100vh;
        width: 100vw;
        padding: 0 0vw;
    }

    nav {
        padding: 8vw 5vw;
        background-color: #EFEAE3;
        /* padding: 0 5vw; */
    }

    #nav-content {
        display: none;
    }

    nav h3 {
        display: block;
        padding: 3vw 5vw;
        border: 1px solid #ababab;
        border-radius: 50px;
        font-size: 4vw;
        font-weight: 200;
        padding-left: 10vw;
    }

    #center {
        height: 62vh;
        width: 100%;
        /* background-color: orange; */
        display: flex;
        align-items: flex-end;
        justify-content: space-between;
        border-bottom: 1px solid #0000003c;
        padding: 7vw 5vw;
        padding-bottom: 10vw;
        flex-direction: column-reverse;
        position: relative;
        z-index: 9;
    }

    #left h3 {
        width: 80%;
        font-size: 5.5vw;
        line-height: 6vw;
    }

    #center h1 {
        font-size: 17vw;
        text-align: right;
        line-height: 15vw;
    }

    #page2 {
        min-height: 100vh;
        width: 100%;
        background-color: #EFEAE3;
        padding: 8vw 0;
        position: relative;
    }

    #moving-text {
        overflow-x: auto;
        white-space: nowrap;
    }

    #moving-text::-webkit-scrollbar {
        display: none;
    }

    .cont {
        white-space: nowrap;
        display: inline-block;
        animation-name: move;
        animation-duration: 10s;
        animation-timing-function: linear;
        animation-iteration-count: infinite;
    }

    #moving-text h1 {
        font-size: 15vw;
        /* background-color: lightblue; */
        display: inline-block;
    }

    #dot {
        height: 25px;
        width: 25px;
        border-radius: 50%;
        display: inline-block;
        background-color: #FE320A;
        margin: 2vw 2vw;
    }

    #page2-bottom {
        height: 90vh;
        width: 100%;
        /* background-color: aliceblue; */
        padding: 10vw 4vw;
        display: flex;
        align-items: flex-start;
        justify-content: space-between;
        position: relative;
        flex-direction: column;
        z-index: 9;
    }

    #page2-bottom h1 {
        font-size: 8.2vw;
        width: 100%;
        line-height: 9vw;
    }

    #bottom-part2 {
        width: 70%;
        /* background-color: aqua; */
    }

    #bottom-part2 img {
        width: 100%;
        border-radius: 10px;
    }

    #bottom-part2 p {
        font-weight: 200;
        margin-top: 2vw;
        font-size: 3vw;
    }

    #page2 #gooey {
        height: 62vw;
        width: 62vw;
        position: absolute;
        border-radius: 50%;
        background: linear-gradient(to top right, #ff2d03, #ff5c0b);
        /* background: linear-gradient(to top right,red,blue); */


        top: 58%;
        left: 25%;
        filter: blur(20px);
        animation-name: gooey;
        animation-duration: 6s;
        animation-iteration-count: infinite;
        animation-direction: alternate;
        animation-timing-function: ease-in-out;

    }

}

#loader{
    height: 100%;
    width: 100%;
    background-color: #000;
    position: fixed;
    z-index: 999;
    top: 0;
    transition: all ease 0.7s;
    display: flex;
    align-items: center;
    justify-content: center;
}

#loader h1{
    font-size: 4vw;
    color: transparent;
    background: linear-gradient(to right,orange,orangered);
    -webkit-background-clip: text;
    position: absolute;
    opacity: 0;
    animation-name: load;
    animation-duration: 1s;
    animation-delay: 1s;
    animation-timing-function: linear;
}
#loader h1:nth-child(2){
    animation-delay: 2s;
}
#loader h1:nth-child(3){
    animation-delay: 3s;
}

@keyframes load {
    0%{
        opacity: 0;
    }
    10%{
        opacity: 1;
    }
    90%{
        opacity: 1;
    }
    100%{
        opacity: 0;
    }
}

@media (max-width:600px) {
    #loader h1{
        font-size: 9vw;
    }
}

